# glim_ext

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml
.github/workflows/: build.yml
config/: config_deskewing.json  config_ext.json  config_flat_earther.json  config_global_ext.json  config_gnss.json  config_gnss_global.json  config_imu_prediction.json  config_orb_slam.json  config_sensors_ext.json  config_velocity_suppressor.json
data/orb_slam/: download.sh
dbow_loop_detector/: CMakeLists.txt
dbow_loop_detector/include/glim_ext/: dbow_loop_detector.hpp
dbow_loop_detector/src/glim_ext/: dbow_loop_detector.cpp
docker/: Dockerfile.ros2
glim_callback_demo/: CMakeLists.txt
glim_callback_demo/src/glim_ext/: glim_callback_demo.cpp
gnss_backend/: CMakeLists.txt
gnss_backend/include/glim_ext/: nmea_parser.hpp
gnss_backend/src/glim_ext/: gnss_backend.cpp
include/glim_ext/util/: config_ext.hpp
modules/backend/dbow_loop_detector/src/glim_ext/: dbow_loop_detector.cpp
modules/backend/gnss_backend/: CMakeLists.txt
modules/backend/gnss_backend/include/glim_ext/: gnss_backend_module.hpp
modules/backend/gnss_backend/src/glim_ext/: gnss_backend.cpp  gnss_backend_module_ros2.cpp
modules/backend/scan_context_loop_detector/: CMakeLists.txt
modules/example/glim_callback_demo/: CMakeLists.txt
modules/example/glim_callback_demo/src/glim_ext/: glim_callback_demo.cpp
modules/frontend/imu_validator/src/glim_ext/: imu_validator.cpp
modules/frontend/orb_slam_frontend/: CMakeLists.txt
modules/frontend/velocity_suppressor/: CMakeLists.txt
modules/frontend/velocity_suppressor/src/glim_ext/: velocity_suppressor.cpp  velocity_suppressor_test.cpp
modules/mapping/dbow_loop_detector/: CMakeLists.txt
modules/mapping/dbow_loop_detector/src/glim_ext/: dbow2_training.cpp  dbow3_training.cpp  dbow_loop_detector.cpp
modules/mapping/flat_earther/: CMakeLists.txt
modules/mapping/flat_earther/include/gtsam_ext/: level_factor.hpp  position_kdtree.hpp
modules/mapping/flat_earther/src/glim_ext/: flat_earther.cpp  flat_earther_export.cpp
modules/mapping/gnss_backend/: CMakeLists.txt  package.xml
modules/mapping/gnss_backend/include/glim_ext/: gnss_backend_module.hpp
modules/mapping/gnss_global/: CMakeLists.txt  package.xml
modules/mapping/gnss_global/include/glim_ext/: geodetic.hpp  gnss_global_module.hpp
modules/mapping/gnss_global/src/glim_ext/: geodetic.cpp  gnss_global_module_ros2.cpp
modules/mapping/scan_context_loop_detector/: CMakeLists.txt
modules/mapping/scan_context_loop_detector/src/glim_ext/: scan_context_loop_detector.cpp
modules/odometry/create_gridmap/: CMakeLists.txt  package.xml
modules/odometry/create_gridmap/src/glim_ext/: create_gridmap.cpp
modules/odometry/deskewing/: CMakeLists.txt  package.xml
modules/odometry/deskewing/include/glim_ext/: deskewing_module.hpp
modules/odometry/deskewing/src/glim_ext/: deskewing_module.cpp  deskewing_module_create.cpp  deskewing_module_ros2.cpp
modules/odometry/eapm_path_planner/: CMakeLists.txt  package.xml
modules/odometry/eapm_path_planner/src/glim_ext/: eapm_path_planner.cpp
modules/odometry/fastlio2/: CMakeLists.txt
modules/odometry/fastlio2/include/glim_ext/: odometry_estimation_fastlio2.hpp
modules/odometry/fastlio2/src/glim_ext/: odometry_estimation_fastlio2.cpp  odometry_estimation_fastlio2_create.cpp
modules/odometry/gravity_estimator/: CMakeLists.txt
modules/odometry/gravity_estimator/include/glim_ext/: gravity_alignment_factor.hpp  gravity_estimator.hpp
modules/odometry/gravity_estimator/src/glim_ext/: gravity_alignment_factor.cpp  gravity_estimator.cpp  gravity_estimator_create.cpp  gravity_estimator_export.cpp
modules/odometry/imu_prediction/: CMakeLists.txt  package.xml
modules/odometry/imu_prediction/include/glim_ext/: imu_prediction_module.hpp
modules/odometry/imu_prediction/src/glim_ext/: imu_prediction_module.cpp  imu_prediction_module_create.cpp  imu_prediction_module_ros2.cpp
modules/odometry/imu_validator/: CMakeLists.txt
modules/odometry/imu_validator/src/glim_ext/: imu_validator.cpp
modules/odometry/orb_slam_frontend/: CMakeLists.txt
modules/odometry/orb_slam_frontend/src/glim_ext/: orb_slam_frontend.cpp
modules/odometry/velocity_suppressor/src/glim_ext/: velocity_suppressor.cpp
orb_slam_frontend/: CMakeLists.txt
orb_slam_frontend/include/glim_ext/: orb_slam_frontend.hpp
orb_slam_frontend/src/glim_ext/: orb_slam_frontend.cpp  orb_slam_test.cpp
scan_context_loop_detector/: CMakeLists.txt
scan_context_loop_detector/include/glim_ext/: scan_context_loop_detector.hpp
scan_context_loop_detector/src/glim_ext/: glim_sc.cpp  scan_context_loop_detector.cpp  test_sc.cpp
src/glim_ext/util/: config_ext.cpp
