<?xml version="1.0"?>
<package format="3">
  <name>eapm_path_planner</name>
  <version>0.0.1</version>
  <description>Path planner module for eapm</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>Eigen3</build_depend>
  <build_depend>OpenCV</build_depend>
  <build_depend>glim</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>Eigen3</exec_depend>
  <exec_depend>OpenCV</exec_depend>
  <exec_depend>glim</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
